config/overlays/prod/client-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
