config/overlays/prod/server-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 3
