config/overlays/prod/server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  labels:
    app.kubernetes.io/component: server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: schedule.pdc2022.org
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 3000
  tls:
    - hosts:
        - schedule.pdc2022.org
      secretName: schedule.pdc2022.org
